--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <title>PWA Text Editor</title>
     <!-- CSS StyleSheet Link -->
     <link rel="stylesheet" href="src/style.css">
+    <link rel="manifest" href="../manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
